Fixed menus deformed alignment

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,4 @@
 .app-container {
-  width: min(100%, 130rem);
-  margin-inline: auto;
+  /* width: min(100%, 130rem);
+  margin-inline: auto; */
 }
